objects/Sales_Team__c.object
<CustomObject>
    <description>Object used to Organize Users into Sales Teams (Teams specific to Markets) for Channel GIBU.</description>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Sales Team</relationshipLabel>
        <relationshipName>Sales_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distribution Application Engineer (DAE)</fullName>
                </value>
                <value>
                    <fullName>Distribution Market Manager (DMM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Team</label>
    <nameField>
        <displayFormat>ST-{0000000}</displayFormat>
        <label>Team Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Teams</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>